--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-html-parser": "^2.0.2"
   },
   "devDependencies": {
+    "@headlessui/react": "^1.6.6",
     "@types/node": "18.0.0",
     "@types/react": "18.0.14",
     "@types/react-dom": "18.0.5",
