--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "eslint": "8.19.0",
     "eslint-config-next": "12.2.0",
     "postcss": "^8.4.14",
+    "react-toastify": "^9.0.8",
     "tailwindcss": "^3.1.4",
     "typescript": "4.7.4"
   }
