--- a/package.json
+++ b/package.json
@@ -10,10 +10,13 @@
   },
   "dependencies": {
     "@heroicons/react": "^1.0.6",
+    "@hookform/resolvers": "^2.9.7",
     "next": "12.2.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-html-parser": "^2.0.2"
+    "react-hook-form": "^7.34.2",
+    "react-html-parser": "^2.0.2",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@headlessui/react": "^1.6.6",
