--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@heroicons/react": "^1.0.6",
     "@hookform/resolvers": "^2.9.7",
     "next": "12.2.0",
+    "nprogress": "^0.2.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.34.2",
@@ -21,6 +22,7 @@
   "devDependencies": {
     "@headlessui/react": "^1.6.6",
     "@types/node": "18.0.0",
+    "@types/nprogress": "^0.2.0",
     "@types/react": "18.0.14",
     "@types/react-dom": "18.0.5",
     "@types/react-html-parser": "^2.0.2",
