--- a/package.json
+++ b/package.json
@@ -26,11 +26,14 @@
     "@types/react": "18.0.14",
     "@types/react-dom": "18.0.5",
     "@types/react-html-parser": "^2.0.2",
+    "@types/styled-components": "^5.1.26",
     "autoprefixer": "^10.4.7",
+    "babel-plugin-styled-components": "^2.0.7",
     "eslint": "8.19.0",
     "eslint-config-next": "12.2.0",
     "postcss": "^8.4.14",
     "react-toastify": "^9.0.8",
+    "styled-components": "^5.3.5",
     "tailwindcss": "^3.1.4",
     "typescript": "4.7.4"
   }
